--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>부트스트랩 101 템플릿</title>
 
     <!-- 부트스트랩 -->
-    <link href="https://github.com/akmui/Hello-Wedding/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/Hello-Wedding/bootstrap-3.3.2-dist/bootstrap-3.3.2-dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- IE8 에서 HTML5 요소와 미디어 쿼리를 위한 HTML5 shim 와 Respond.js -->
     <!-- WARNING: Respond.js 는 당신이 file:// 을 통해 페이지를 볼 때는 동작하지 않습니다. -->
