--- a/index.html
+++ b/index.html
@@ -4,54 +4,27 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- 위 3개의 메타 태그는 *반드시* head 태그의 처음에 와야합니다; 어떤 다른 콘텐츠들은 반드시 이 태그들 *다음에* 와야 합니다 -->
-    <title>부트스트랩 101 템플릿</title>
-
-    <!-- 부트스트랩 -->
+    <title>Hellow My Wedding</title>
     <link href="https://akmui.github.io/Hello-Wedding/bootstrap-3.3.2-dist/bootstrap-3.3.2-dist/css/bootstrap-theme.min.css" rel="stylesheet">
-
-    <!-- IE8 에서 HTML5 요소와 미디어 쿼리를 위한 HTML5 shim 와 Respond.js -->
-    <!-- WARNING: Respond.js 는 당신이 file:// 을 통해 페이지를 볼 때는 동작하지 않습니다. -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
   </head>
-  <body>
-    <body id="target">
+
+<body id="target">
 <div class="container">
 <header class='jumbotron text-center'>
-	<img class="img-circle" id="logo" src="https://s3.ap-northeast-2.amazonaws.com/opentutorials-user-file/course/94.png" alt="생활코딩" title="승현이 대문입니다!" />
-	<h1><a href="/index.php">JavaScript</a></h1>
+<img class="img-circle" id="logo" src="https://s3.ap-northeast-2.amazonaws.com/opentutorials-user-file/course/94.png" alt="생활코딩" title="승현이 대문입니다!" />
+<h1><a href="/index.php">JavaScript</a></h1>
 </header>
 
 <div class="row">
 
 <nav class="col-md-3">
 	<ol class="nav nav-pills nav-stacked">
-<?php
-while ($row=mysqli_fetch_assoc($result))
-{echo '<li><a href="/index.php?id='.$row['id'].'">'.htmlspecialchars($row['title']).'</li></a>'."\n";
-echo "<br />";
-}
-?>
 	</ol>
 </nav>
 
 <div class="col-md-9">
-
-
+	
 <article class="">
-<?php
-if (empty($_GET['id'])===false) {
-$sql='SELECT*FROM topic where id='.$_GET['id'];
-$result=mysqli_query($conn,$sql);
-$row=mysqli_fetch_assoc($result);
-echo '<h2>'.htmlspecialchars($row['title']).'</h2>';
-echo strip_tags($row['description'],'<a><h1><h2><h3><ul><ol><li>');
-	# code...
-}
- ?>
 </article>
 <hr>
 <div id="ctrl">
