--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Hellow My Wedding</title>
     <link href="https://akmui.github.io/Hello-Wedding/bootstrap-3.3.2-dist/bootstrap-3.3.2-dist/css/bootstrap-theme.min.css" rel="stylesheet">
   </head>
-
+<body>
+  <p>For My Wedding, To my Friends who are the precious than ever</p>
+  
     <!-- jQuery (부트스트랩의 자바스크립트 플러그인을 위해 필요합니다) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <!-- 모든 컴파일된 플러그인을 포함합니다 (아래), 원하지 않는다면 필요한 각각의 파일을 포함하세요 -->
