--- a/theme/index.html
+++ b/theme/index.html
@@ -63,9 +63,9 @@
 			</div>
 			<br>
 			<div class="row">
-				<h1>My Wedding</h1>
+				<h1>MY WEDDING</h1>
 				<br>
-				<h3>To my Friends who are the precious than ever.</h3>
+				<h3>"To my Friends who are the precious than ever."</h3>
 				<br>
 				<br>
 				<div class="col-lg-6 col-lg-offset-3">
