--- a/theme/index.html
+++ b/theme/index.html
@@ -19,7 +19,12 @@
     <script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/modernizr.custom.js"></script>
 	
-
+	<style>
+		#Headerwrap{ background-attachment: relative; 
+		background-color:gray;
+		}
+	  
+	</style>
 	
     <link href='https://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
