--- a/theme/index.html
+++ b/theme/index.html
@@ -85,11 +85,11 @@
 				
 				<!-- INTRO INFORMATIO-->
 				<div class="col-lg-6 col-lg-offset-3">
-					<p>A full time theme crafter based in Madrid, Spain. I love designing beautiful, clean and user-friendly interfaces for websites.</p>
-					<p>My passion is turning good ideas and products into eye-catching sites.</p>
-					<p>Sometimes I blog about design and web trends. Also I share links and my thoughts on <a href="http://twitter.com/BlackTie_co">Twitter</a>. Need a free handsome bootstrap theme? <a href="http://blacktie.co">Done!</a></p>
-					<p>I'm available for freelance jobs. Contact me now.</p>
-					<p><button type="button" class="btn btn-warning">I HAVE A FREELANCE JOB</button></p>
+					<p>a full story about us</p>
+					<p></p>
+					<p></p>
+					<p></p>
+					<p><button type="button" class="btn btn-warning">for more story</button></p>
 				</div>								
 			</div>
 		</div><!-- /container -->
@@ -164,8 +164,8 @@
 		<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 					
 					</p>
-					<p>Some Avenue, 987<br/>Madrid, Spain<br/>+34 8984-4343</p>
-					<p>iam@awesomemail.com</p>
+					<p></p>
+					<p></p>
 					<p><button type="button" class="btn btn-warning">YEAH! CONTACT ME NOW!</button></p>
 				</div>
 			</div>
