--- a/theme/index.html
+++ b/theme/index.html
@@ -109,13 +109,16 @@
 						<!-- Wrapper for slides -->
 						<div class="carousel-inner">
 							<div class="item active centered">
-								<img class="img-responsive" src="assets/img/c1.png" alt="">
+								<img class="img-responsive" src="assets/img/IMG_4777.JPG" alt="">
 							</div>
 							<div class="item centered">
-								<img class="img-responsive" src="assets/img/c2.png" alt="">
+								<img class="img-responsive" src="assets/img/IMG_4794.JPG" alt="">
 							</div>
 							<div class="item centered">
-								<img class="img-responsive" src="assets/img/c3.png" alt="">
+								<img class="img-responsive" src="assets/img/IMG_6522.JPG" alt="">
+							</div>
+							<div class="item centered">
+								<img class="img-responsive" src="assets/img/IMG_7871.JPG" alt="">
 							</div>
 						</div>
 						<br>
