--- a/theme/index.html
+++ b/theme/index.html
@@ -104,7 +104,7 @@
 				<h3>SOME PICTURES</h3>
 				<p class="centered"><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i></p>
 				
-				<div class="col-lg-6 col-lg-offset-3">
+				<div class="col-lg-6 col-lg-offset-4">
 					<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
 						<!-- Wrapper for slides -->
 						<div class="carousel-inner">
@@ -127,6 +127,8 @@
 						    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
 						    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
 						    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+				                    <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+						    <li data-target="#carousel-example-generic" data-slide-to="4"></li>
 						</ol>
 					</div>
 				</div><!-- col-lg-8 -->
