--- a/theme/index.html
+++ b/theme/index.html
@@ -115,10 +115,10 @@
 								<img class="img-responsive" src="assets/img/IMG_4794.JPG" alt="">
 							</div>
 							<div class="item centered">
-								<img class="img-responsive" src="assets/img/IMG_6522.JPG" alt="">
+								<img class="img-responsive" src="assets/img/IMG_6522.jpg" alt="">
 							</div>
 							<div class="item centered">
-								<img class="img-responsive" src="assets/img/IMG_7871.JPG" alt="">
+								<img class="img-responsive" src="assets/img/IMG_7871.jpg" alt="">
 							</div>
 						</div>
 						<br>
