--- a/theme/index.html
+++ b/theme/index.html
@@ -109,16 +109,16 @@
 						<!-- Wrapper for slides -->
 						<div class="carousel-inner">
 							<div class="item active centered">
-								<img class="img-responsive" src="assets/img/IMG_4777.JPG" alt="">
+								<img class="img-responsive" src="assets/img/IMG_4777.JPG" style="margin-left: auto; margin-right: auto; display: block;" alt="">
 							</div>
 							<div class="item centered">
-								<img class="img-responsive" src="assets/img/IMG_4794.JPG" alt="">
+								<img class="img-responsive" src="assets/img/IMG_4794.JPG" style="margin-left: auto; margin-right: auto; display: block;" alt="">
 							</div>
 							<div class="item centered">
-								<img class="img-responsive" src="assets/img/IMG_6522.jpg" alt="">
+								<img class="img-responsive" src="assets/img/IMG_6522.jpg" style="margin-left: auto; margin-right: auto; display: block;" alt="">
 							</div>
 							<div class="item centered">
-								<img class="img-responsive" src="assets/img/IMG_7871.jpg" alt="">
+								<img class="img-responsive" src="assets/img/IMG_7871.jpg" style="margin-left: auto; margin-right: auto; display: block;" alt="">
 							</div>
 						</div>
 						<br>
