--- a/theme/index.html
+++ b/theme/index.html
@@ -112,13 +112,13 @@
 								<img class="img-responsive" src="assets/img/IMG_4777.JPG" alt="">
 							</div>
 							<div class="item centered">
-								<img class="img-responsive" src="assets/img/IMG_4794.JPG" alt="">
+								<img class="img-responsive" src="assets/img/IMG_4794.JPG">
 							</div>
 							<div class="item centered">
-								<img class="img-responsive" src="assets/img/IMG_6522.jpg" alt="">
+								<img class="img-responsive" src="assets/img/IMG_6522.jpg">
 							</div>
 							<div class="item centered">
-								<img class="img-responsive" src="assets/img/IMG_7871.jpg" alt="">
+								<img class="img-responsive" src="assets/img/IMG_7871.jpg">
 							</div>
 						</div>
 						<br>
