--- a/theme/index.html
+++ b/theme/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="assets/ico/marriage.png">
+     <link rel="shortcut icon" href="assets/ico/favicon.png">
 
     <title>For My Wedding, To my Friends who are the precious than ever.</title>
 
@@ -58,7 +58,7 @@
 	<div id="headerwrap">
 		<div class="container">
 			<div class="logo">
-				<img src="assets/img/logo.png">
+				<img src="assets/img/marriage.png">
 			</div>
 			<br>
 			<div class="row">
