--- a/theme/index.html
+++ b/theme/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
      <link rel="shortcut icon" href="assets/ico/favicon.png">
 
-    <title>For My Wedding, To my Friends who are the precious than ever.</title>
+    <title>Hellow, Wedding</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -37,10 +37,10 @@
 		<div class="menu-wrap">
 			<h1 class="logo"><a href="index.html#home">Minimal</a></h1>
 			<i class="icon-remove menu-close"></i>
-			<a href="#home" class="smoothScroll">Home</a>
-			<a href="#about" class="smoothScroll">About</a>
-			<a href="#portfolio" class="smoothScroll">Portfolio</a>
-			<a href="#contact" class="smoothScroll">Contact</a>
+			<a href="#HOME" class="smoothScroll">Home</a>
+			<a href="#TO MY FRIENDS" class="smoothScroll">About</a>
+			<a href="#SOME PICTURES" class="smoothScroll">Portfolio</a>
+			<a href="#COMMENTS" class="smoothScroll">Contact</a>
 			<a href="#"><i class="icon-facebook"></i></a>
 			<a href="#"><i class="icon-twitter"></i></a>
 			<a href="#"><i class="icon-dribbble"></i></a>
@@ -62,9 +62,9 @@
 			</div>
 			<br>
 			<div class="row">
-				<h1>MY WEDDING</h1>
+				<h1>HELLO! WEDDING!</h1>
 				<br>
-				<h3>"To my Friends who are the precious than ever."</h3>
+				<h3>"YOU ARE INVITED"</h3>
 				<br>
 				<br>
 				<div class="col-lg-6 col-lg-offset-3">
@@ -80,16 +80,18 @@
 	<div id="f">
 		<div class="container">
 			<div class="row">
-				<h3>ABOUT US</h3>
+				<h3>To my friends</h3>
 				<p class="centered"><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i></p>
 				
 				<!-- INTRO INFORMATIO-->
 				<div class="col-lg-6 col-lg-offset-3">
-					<p>a full story about us</p>
-					<p></p>
-					<p></p>
-					<p></p>
-					<p><button type="button" class="btn btn-warning">for more story</button></p>
+					<p>INMO: Um... Thank you all for celebrating our wedding.</p>
+					<p>SEUNGHYUN: Done? </p>
+					<p>INMO: Yes!</p>
+					<p>SEUNGHYUN: ...</p>
+					<p>2018.2.28(Wed) 20:00</p>
+					<p><a href="http://naver.me/xG2536I5">
+						<button type="button" class="btn btn-warning">You can find the wedding place here!</button></a></p>
 				</div>								
 			</div>
 		</div><!-- /container -->
@@ -141,7 +143,7 @@
 	<div id="f">
 		<div class="container">
 			<div class="row">
-				<h3>CONTACT ME</h3>
+				<h3>COMMENTS</h3>
 				<p class="centered"><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i></p>
 				
 				<div class="col-lg-6 col-lg-offset-3">
@@ -171,7 +173,7 @@
 					</p>
 					<p></p>
 					<p></p>
-					<p><button type="button" class="btn btn-warning">YEAH! CONTACT ME NOW!</button></p>
+					<p><button type="button" class="btn btn-warning">Please call me if you get lost</button></p>
 				</div>
 			</div>
 		</div>
