--- a/theme/index.html
+++ b/theme/index.html
@@ -89,7 +89,7 @@
 					<p>INMO: Yes!</p>
 					<p>SEUNGHYUN: ...</p>
 					<p>2018.2.28(Wed) 20:00</p>
-					<p><a href="http://naver.me/xG2536I5">
+					<p><a href="http://naver.me/xG2536I5" target="_blank">
 						<button type="button" class="btn btn-warning">You can find the wedding place here!</button></a></p>
 				</div>								
 			</div>
