--- a/theme/index.html
+++ b/theme/index.html
@@ -35,12 +35,12 @@
 	<!-- Menu -->
 	<nav class="menu" id="theMenu">
 		<div class="menu-wrap">
-			<h1 class="logo"><a href="index.html#home">Minimal</a></h1>
+			<h1 class="logo"><a href="index.html#home">HELLO WEDDING</a></h1>
 			<i class="icon-remove menu-close"></i>
-			<a href="#HOME" class="smoothScroll">Home</a>
-			<a href="#TO MY FRIENDS" class="smoothScroll">About</a>
-			<a href="#SOME PICTURES" class="smoothScroll">Portfolio</a>
-			<a href="#COMMENTS" class="smoothScroll">Contact</a>
+			<a href="#home" class="smoothScroll">Home</a>
+			<a href="#about" class="smoothScroll">TO MY FRIENDS</a>
+			<a href="#portfolio" class="smoothScroll">SOME PICTURES</a>
+			<a href="#contact" class="smoothScroll">COMMENTS</a>
 			<a href="#"><i class="icon-facebook"></i></a>
 			<a href="#"><i class="icon-twitter"></i></a>
 			<a href="#"><i class="icon-dribbble"></i></a>
