--- a/theme/index.html
+++ b/theme/index.html
@@ -39,7 +39,7 @@
 			<i class="icon-remove menu-close"></i>
 			<a href="#home" class="smoothScroll">Home</a>
 			<a href="#about" class="smoothScroll">TO MY FRIENDS</a>
-			<a href="#portfolio" class="smoothScroll">SOME PICTURES</a>
+			<a href="#portfolio" class="smoothScroll">PICTURES</a>
 			<a href="#contact" class="smoothScroll">COMMENTS</a>
 			<a href="#"><i class="icon-facebook"></i></a>
 			<a href="#"><i class="icon-twitter"></i></a>
@@ -63,7 +63,7 @@
 			<div class="row">
 				<h1>HELLO! WEDDING!</h1>
 				<br>
-				<h3>"YOU ARE INVITED"</h3>
+				<h3>"2018.2.28(WED) 20:00"</h3>
 				<br>
 				<br>
 				<div class="col-lg-6 col-lg-offset-3">
@@ -110,17 +110,98 @@
 						<!-- Wrapper for slides -->
 						<div class="carousel-inner">
 							<div class="item active centered">
-								<img class="img-responsive" src="assets/img/IMG_4777.JPG" alt="">
+								<img class="img-responsive" src="assets/img/31.JPG" alt="">
 							</div>
 							<div class="item centered">
-								<img class="img-responsive" src="assets/img/IMG_4794.JPG">
+								<img class="img-responsive" src="assets/img/1.JPG">
 							</div>
 							<div class="item centered">
-								<img class="img-responsive" src="assets/img/IMG_6522.jpg">
+								<img class="img-responsive" src="assets/img/2.JPG">
 							</div>
 							<div class="item centered">
-								<img class="img-responsive" src="assets/img/IMG_7871.jpg">
+								<img class="img-responsive" src="assets/img/3.JPG">
 							</div>
+							<div class="item centered">
+								<img class="img-responsive" src="assets/img/5.JPG">
+							</div>
+							<div class="item centered">
+								<img class="img-responsive" src="assets/img/6.JPG">
+							</div>
+							
+							<div class="item centered">
+								<img class="img-responsive" src="assets/img/7.JPG">
+							</div>
+							<div class="item centered">
+								<img class="img-responsive" src="assets/img/8.JPG">
+							</div>
+							<div class="item centered">
+								<img class="img-responsive" src="assets/img/9.JPG">
+							</div>
+							<div class="item centered">
+								<img class="img-responsive" src="assets/img/10.JPG">
+							</div>
+							<div class="item centered">
+								<img class="img-responsive" src="assets/img/11.JPG">
+							</div>
+							<div class="item centered">
+								<img class="img-responsive" src="assets/img/12.JPG">
+							</div>
+							<div class="item centered">
+								<img class="img-responsive" src="assets/img/13.JPG">
+							</div>
+							<div class="item centered">
+								<img class="img-responsive" src="assets/img/14.JPG">
+							</div>
+							<div class="item centered">
+								<img class="img-responsive" src="assets/img/15.JPG">
+							</div>
+							<div class="item centered">
+								<img class="img-responsive" src="assets/img/16.JPG">
+							</div>
+							<div class="item centered">
+								<img class="img-responsive" src="assets/img/17.JPG">
+							</div>
+							<div class="item centered">
+								<img class="img-responsive" src="assets/img/18.JPG">
+							</div>
+							<div class="item centered">
+								<img class="img-responsive" src="assets/img/19.JPG">
+							</div>
+
+							<div class="item centered">
+								<img class="img-responsive" src="assets/img/20.JPG">
+							</div>
+							<div class="item centered">
+								<img class="img-responsive" src="assets/img/21.JPG">
+							</div>
+							<div class="item centered">
+								<img class="img-responsive" src="assets/img/22.JPG">
+							</div>
+							<div class="item centered">
+								<img class="img-responsive" src="assets/img/23.JPG">
+							</div>
+							<div class="item centered">
+								<img class="img-responsive" src="assets/img/24.JPG">
+							</div>
+							<div class="item centered">
+								<img class="img-responsive" src="assets/img/25.JPG">
+							</div>
+							<div class="item centered">
+								<img class="img-responsive" src="assets/img/26.JPG">
+							</div>
+							<div class="item centered">
+								<img class="img-responsive" src="assets/img/27.JPG">
+							</div>
+							<div class="item centered">
+								<img class="img-responsive" src="assets/img/28.JPG">
+							</div>
+							<div class="item centered">
+								<img class="img-responsive" src="assets/img/29.JPG">
+							</div>
+							<div class="item centered">
+								<img class="img-responsive" src="assets/img/30.JPG">
+							</div>
+					
 						</div>
 						<br>
 						<br>
