--- a/theme/index.html
+++ b/theme/index.html
@@ -110,56 +110,56 @@
 						<!-- Wrapper for slides -->
 						<div class="carousel-inner">
 							<div class="item active centered">
-								<img class="img-responsive" src="assets/img/31.JPG" alt="">
+								<img class="img-responsive" src="assets/img/31.jpg" alt="">
 							</div>
 							<div class="item centered">
-								<img class="img-responsive" src="assets/img/1.JPG">
+								<img class="img-responsive" src="assets/img/1.jpg">
 							</div>
 							<div class="item centered">
-								<img class="img-responsive" src="assets/img/2.JPG">
+								<img class="img-responsive" src="assets/img/2.jpg">
 							</div>
 							<div class="item centered">
-								<img class="img-responsive" src="assets/img/3.JPG">
+								<img class="img-responsive" src="assets/img/3.jpg">
 							</div>
 							<div class="item centered">
-								<img class="img-responsive" src="assets/img/5.JPG">
+								<img class="img-responsive" src="assets/img/5.jpeg">
 							</div>
 							<div class="item centered">
-								<img class="img-responsive" src="assets/img/6.JPG">
+								<img class="img-responsive" src="assets/img/6.jpeg">
 							</div>
 							
 							<div class="item centered">
-								<img class="img-responsive" src="assets/img/7.JPG">
+								<img class="img-responsive" src="assets/img/7.jpg">
 							</div>
 							<div class="item centered">
-								<img class="img-responsive" src="assets/img/8.JPG">
+								<img class="img-responsive" src="assets/img/8.jpeg">
 							</div>
 							<div class="item centered">
-								<img class="img-responsive" src="assets/img/9.JPG">
+								<img class="img-responsive" src="assets/img/9.jpeg">
 							</div>
 							<div class="item centered">
-								<img class="img-responsive" src="assets/img/10.JPG">
+								<img class="img-responsive" src="assets/img/10.jpeg">
 							</div>
 							<div class="item centered">
-								<img class="img-responsive" src="assets/img/11.JPG">
+								<img class="img-responsive" src="assets/img/11.jpeg">
 							</div>
 							<div class="item centered">
-								<img class="img-responsive" src="assets/img/12.JPG">
+								<img class="img-responsive" src="assets/img/12.jpeg">
 							</div>
 							<div class="item centered">
-								<img class="img-responsive" src="assets/img/13.JPG">
+								<img class="img-responsive" src="assets/img/13.jpeg">
 							</div>
 							<div class="item centered">
-								<img class="img-responsive" src="assets/img/14.JPG">
+								<img class="img-responsive" src="assets/img/14.jpeg">
 							</div>
 							<div class="item centered">
-								<img class="img-responsive" src="assets/img/15.JPG">
+								<img class="img-responsive" src="assets/img/15.jpg">
 							</div>
 							<div class="item centered">
 								<img class="img-responsive" src="assets/img/16.JPG">
 							</div>
 							<div class="item centered">
-								<img class="img-responsive" src="assets/img/17.JPG">
+								<img class="img-responsive" src="assets/img/17.jpg">
 							</div>
 							<div class="item centered">
 								<img class="img-responsive" src="assets/img/18.JPG">
@@ -167,7 +167,6 @@
 							<div class="item centered">
 								<img class="img-responsive" src="assets/img/19.JPG">
 							</div>
-
 							<div class="item centered">
 								<img class="img-responsive" src="assets/img/20.JPG">
 							</div>
@@ -175,28 +174,28 @@
 								<img class="img-responsive" src="assets/img/21.JPG">
 							</div>
 							<div class="item centered">
-								<img class="img-responsive" src="assets/img/22.JPG">
+								<img class="img-responsive" src="assets/img/22.jpg">
 							</div>
 							<div class="item centered">
-								<img class="img-responsive" src="assets/img/23.JPG">
+								<img class="img-responsive" src="assets/img/23.jpg">
 							</div>
 							<div class="item centered">
 								<img class="img-responsive" src="assets/img/24.JPG">
 							</div>
 							<div class="item centered">
-								<img class="img-responsive" src="assets/img/25.JPG">
+								<img class="img-responsive" src="assets/img/25.jpg">
 							</div>
 							<div class="item centered">
-								<img class="img-responsive" src="assets/img/26.JPG">
+								<img class="img-responsive" src="assets/img/26.jpg">
 							</div>
 							<div class="item centered">
 								<img class="img-responsive" src="assets/img/27.JPG">
 							</div>
 							<div class="item centered">
-								<img class="img-responsive" src="assets/img/28.JPG">
+								<img class="img-responsive" src="assets/img/28.jpg">
 							</div>
 							<div class="item centered">
-								<img class="img-responsive" src="assets/img/29.JPG">
+								<img class="img-responsive" src="assets/img/29.jpg">
 							</div>
 							<div class="item centered">
 								<img class="img-responsive" src="assets/img/30.JPG">
