--- a/theme/index.html
+++ b/theme/index.html
@@ -61,7 +61,7 @@
 			</div>
 			<br>
 			<div class="row">
-				<h1>HELLO! WEDDING!</h1>
+				<h1>WE ARE GETTING MARRIED</h1>
 				<br>
 				<h3>"2018.2.28(WED) 20:00"</h3>
 				<br>
