--- a/theme/index.html
+++ b/theme/index.html
@@ -84,8 +84,8 @@
 				
 				<!-- INTRO INFORMATIO-->
 				<div class="col-lg-6 col-lg-offset-3">
-					<p>항상 응원해주고  지지해줘서 고마워요.<br>서로에게 충실한 관계를 이어 나갈께요!</p>
-					<p>지난 3년 지켜봐줘서 너무 행복했고,<br>앞으로도 각별한 애청자가 되주세요 :D</p>
+					<p>항상 응원해주고<br>지지해줘서 고마워요.<br>서로에게 충실한 관계를<br>만들어 나갈께요!</p>
+					<p>지난 3년 지켜봐줘서<br>너무 행복했고,<br>앞으로도<br>각별한 애청자가 되주세요 :D</p>
 					<p><a href="http://naver.me/xG2536I5" target="_blank">
 						<button type="button" class="btn btn-warning">You can find the wedding place here!</button></a></p>
 				</div>								
