--- a/theme/index.html
+++ b/theme/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
      <link rel="shortcut icon" href="assets/ico/favicon.png">
 
-    <title>Hellow, Wedding</title>
+    <title>WE ARE GETTING MARRIED</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -110,7 +110,7 @@
 								<img class="img-responsive" src="assets/img/31.jpg" alt="">
 							</div>
 							<div class="item centered">
-								<img class="img-responsive" src="assets/img/1.jpg">
+								<img class="img-responsive" src="assets/img/30.jpg">
 							</div>
 							<div class="item centered">
 								<img class="img-responsive" src="assets/img/2.jpg">
@@ -195,7 +195,7 @@
 								<img class="img-responsive" src="assets/img/29.jpg">
 							</div>
 							<div class="item centered">
-								<img class="img-responsive" src="assets/img/30.JPG">
+								<img class="img-responsive" src="assets/img/1.JPG">
 							</div>
 					
 						</div>
