--- a/theme/index.html
+++ b/theme/index.html
@@ -107,7 +107,7 @@
 						<!-- Wrapper for slides -->
 						<div class="carousel-inner">
 							<div class="item active centered">
-								<img class="img-responsive" src="assets/img/30.jpg" alt="">
+								<img class="img-responsive" src="assets/img/30.JPG" alt="">
 							</div>
 							<div class="item centered">
 								<img class="img-responsive" src="assets/img/1.jpg">
@@ -195,7 +195,7 @@
 								<img class="img-responsive" src="assets/img/29.jpg">
 							</div>
 							<div class="item centered">
-								<img class="img-responsive" src="assets/img/31.JPG">
+								<img class="img-responsive" src="assets/img/31.jpg">
 							</div>
 					
 						</div>
